# eleven

./: .gitignore  COPYING  Justfile  README.md  dev.getapollo.Eleven.json  meson.build
data/: dev.getapollo.Eleven.desktop.in  dev.getapollo.Eleven.gschema.xml  dev.getapollo.Eleven.metainfo.xml.in  dev.getapollo.Eleven.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  eleven.pot  meson.build
src/: eleven.gresource.xml  eleven.in  main.py  meson.build  window.blp  window.py
src/pages/: welcome.blp  welcome.py
src/service/: config.py  service.py
